--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.4.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.10.0",
     "qrcode-terminal": "^0.12.0"
